<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.qa</groupId>
  <artifactId>restassured-test-automation-sample</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>restassured-test-automation-sample</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
	    <groupId>io.rest-assured</groupId>
	    <artifactId>rest-assured</artifactId>
	    <version>5.5.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
	<dependency>
	    <groupId>org.testng</groupId>
	    <artifactId>testng</artifactId>
	    <version>7.11.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
	<dependency>
	    <groupId>org.hamcrest</groupId>
	    <artifactId>hamcrest</artifactId>
	    <version>3.0</version>
	</dependency>
	<dependency>
  		<groupId>com.aventstack</groupId>
  		<artifactId>extentreports</artifactId>
  		<version>5.0.9</version>
	</dependency>
	<!--<dependency>
		<groupId>org.example</groupId>
		<artifactId>restassured</artifactId>
		<version>1.0-SNAPSHOT</version>
	</dependency>-->
	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>2.19.2</version>
	</dependency>
	<dependency>
    	<groupId>com.fasterxml.jackson.core</groupId>
    	<artifactId>jackson-core</artifactId>
    	<version>2.19.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-annotations</artifactId>
	    <version>2.19.2</version>
	</dependency>
	<dependency>
	  <groupId>com.github.javafaker</groupId>
	  <artifactId>javafaker</artifactId>
	  <version>1.0.2</version>
	</dependency>
	<dependency>
	  	 <groupId>org.projectlombok</groupId>
	  	 <artifactId>lombok</artifactId>
	     <version>1.18.32</version>
	     <scope>provided</scope>
     </dependency>
     <dependency>
	  <groupId>org.json</groupId>
	  <artifactId>json</artifactId>
	  <version>20231013</version>
	</dependency>


  </dependencies>
  
  <build>
    <plugins>
      <plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-compiler-plugin</artifactId>
	  <version>3.13.0</version>
	  <configuration>
	    <source>17</source>
	    <target>17</target>
	    <fork>true</fork>
	    <compilerArgs>
	      <arg>--add-opens</arg>
	      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
	      <arg>--add-opens</arg>
	      <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
	    </compilerArgs>
	  </configuration>
	</plugin>
	<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
